Bug 34543 - BROADCAST_RGB fails
Summary: BROADCAST_RGB fails
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-21 12:24 UTC by Andreas
Modified: 2017-07-24 23:05 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Add support for "Broadcast RGB" (7.27 KB, patch)
2011-02-21 14:28 UTC, Chris Wilson
no flags Details | Splinter Review

Description Andreas 2011-02-21 12:24:31 UTC
Trying to set the BROADCAST_RGB option fails either in Xorg.conf or with xrandr:

Xorg:
[699959.322] (WW) intel(0): Option "BROADCAST_RGB" is not used

xrandr:
xrandr --output HDMI2 --set BROADCAST_RGB 0
X Error of failed request:  BadName (named color or font does not exist)
  Major opcode of failed request:  150 (RANDR)
  Minor opcode of failed request:  11 (RRQueryOutputProperty)
  Serial number of failed request:  33
  Current serial number in output stream:  33


I took a look at the source code for the Xorg driver and couldn't find the option in the code, only the man page.

So the result is that it is not possible to specify limited rgb.

System info:

libdrm: 2.4.23
kernel: 2.6.36-999-generic #201010311115
CPU/GFX: core i3 540
i915 driver: 2.14.0
Comment 1 Chris Wilson 2011-02-21 14:28:59 UTC
Created attachment 43624 [details] [review]
Add support for "Broadcast RGB"

This will then expose the parameter through xrandr and I will remove the obsolete entry from the man page.
Comment 2 Chris Wilson 2011-02-23 01:08:25 UTC
drm-intel-next commit e953fd7bb32f55309a96abd5ceba9cf68d221434
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Feb 21 22:23:52 2011 +0000

    drm/i915: Add support for limited color range of broadcast outputs
    
    In order to prevent "crushed blacks" on TVs, the range of the RGB output
    may be limited to 16-235. This used to be available through Xorg under
    the "Broadcast RGB" option, so reintroduce support for KMS.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=34543
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 Andreas 2011-02-23 01:14:03 UTC
Thanks, I will give it a try as soon I get a chance.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.